crates/cherry-pit-core/tests/compile_fail/aggregate_requires_default.stderr
error[E0277]: the trait bound `Foo: Default` is not satisfied
  --> tests/compile_fail/aggregate_requires_default.rs:23:20
   |
23 | impl Aggregate for Foo {
   |                    ^^^ the trait `Default` is not implemented for `Foo`
   |
note: required by a bound in `Aggregate`
  --> src/aggregate.rs
   |
   | pub trait Aggregate: Default + Send + Sync + 'static {
   |                      ^^^^^^^ required by this bound in `Aggregate`
help: consider annotating `Foo` with `#[derive(Default)]`
   |
21 + #[derive(Default)]
22 | struct Foo;
   |
